--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -26,129 +26,134 @@
         android:textSize="27dp"
         android:textStyle="bold" />
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp"
-        android:paddingTop="20dp"
-        android:paddingBottom="40dp"
-        android:layout_marginRight="15dp"
-        android:layout_marginLeft="15dp"
-        android:orientation="vertical"
-        android:elevation="10dp"
-        android:background="@drawable/custom_pop_background">
+    <ScrollView
+        android:layout_height="match_parent"
+        android:layout_width="match_parent"
+        android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/txtUsername"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
+        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginLeft="10dp"
-            android:gravity="center"
-            android:textStyle="bold"
-            android:text="Username:"
-            android:textSize="16dp"
-            android:textColor="@color/maincolor"/>
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_marginRight="5dp"
-            android:layout_marginLeft="5dp"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:paddingTop="20dp"
+            android:paddingBottom="40dp"
+            android:layout_marginRight="15dp"
+            android:layout_marginLeft="15dp"
+            android:orientation="vertical"
             android:elevation="10dp"
-            android:layout_gravity="bottom"
-            android:background="@drawable/custom_border"
-            android:id="@+id/locationLayout">
+            android:background="@drawable/custom_pop_background">
 
-            <EditText
-                android:id="@+id/username"
-                android:textColor="@color/maincolor"
+            <TextView
+                android:id="@+id/txtEmail"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@null"
+                android:layout_height="50dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginLeft="10dp"
                 android:gravity="center"
+                android:textStyle="bold"
+                android:text="Email:"
                 android:textSize="16dp"
-                android:hint="Username"
-                android:ems="10"
-                android:inputType="text"/>
+                android:textColor="@color/maincolor"/>
 
-        </RelativeLayout>
-
-        <TextView
-            android:id="@+id/txtPassword"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginLeft="10dp"
-            android:textStyle="bold"
-            android:gravity="center"
-            android:text="Password:"
-            android:textSize="16dp"
-            android:textColor="@color/maincolor"/>
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_marginTop="0dp"
-            android:layout_marginRight="5dp"
-            android:layout_marginLeft="5dp"
-            android:elevation="10dp"
-            android:layout_gravity="bottom"
-            android:background="@drawable/custom_border"
-            android:id="@+id/radiusLayout">
-
-            <EditText
-                android:id="@+id/password"
-                android:textColor="@color/maincolor"
+            <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@null"
+                android:layout_height="50dp"
+                android:layout_marginRight="5dp"
+                android:layout_marginLeft="5dp"
+                android:elevation="10dp"
+                android:layout_gravity="bottom"
+                android:background="@drawable/custom_border"
+                android:id="@+id/locationLayout">
+
+                <EditText
+                    android:id="@+id/email"
+                    android:textColor="@color/maincolor"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@null"
+                    android:gravity="center"
+                    android:textSize="16dp"
+                    android:hint="Email"
+                    android:ems="10"
+                    android:inputType="textEmailAddress"/>
+
+            </RelativeLayout>
+
+            <TextView
+                android:id="@+id/txtPassword"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginLeft="10dp"
+                android:textStyle="bold"
                 android:gravity="center"
+                android:text="Password:"
                 android:textSize="16dp"
-                android:ems="10"
-                android:inputType="text"
-                android:hint="Password"/>
+                android:textColor="@color/maincolor"/>
 
-        </RelativeLayout>
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_marginTop="0dp"
+                android:layout_marginRight="5dp"
+                android:layout_marginLeft="5dp"
+                android:elevation="10dp"
+                android:layout_gravity="bottom"
+                android:background="@drawable/custom_border"
+                android:id="@+id/radiusLayout">
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="70dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginRight="5dp"
-            android:layout_marginLeft="5dp"
-            android:elevation="10dp"
-            android:layout_gravity="bottom"
-            android:id="@+id/buttonLayout">
+                <EditText
+                    android:id="@+id/password"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@null"
+                    android:ems="10"
+                    android:gravity="center"
+                    android:hint="Password"
+                    android:inputType="textPassword"
+                    android:textColor="@color/maincolor"
+                    android:textSize="16dp" />
 
-            <Button
-                android:id="@+id/login"
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="70dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginRight="5dp"
+                android:layout_marginLeft="5dp"
+                android:elevation="10dp"
+                android:layout_gravity="bottom"
+                android:id="@+id/buttonLayout">
+
+                <Button
+                    android:id="@+id/login"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginTop="20dp"
+                    android:elevation="5dp"
+                    android:text="Login"
+                    android:textColor="@color/snow"
+                    android:background="@drawable/custom_main_button"/>
+
+            </RelativeLayout>
+
+            <TextView
+                android:id="@+id/txtRegister"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginTop="20dp"
-                android:elevation="5dp"
-                android:text="Login"
-                android:onClick="loginUser"
-                android:textColor="@color/snow"
-                android:background="@drawable/custom_main_button"/>
+                android:gravity="center"
+                android:paddingTop="10dp"
+                android:textSize="12dp"
+                android:onClick="registerUser"
+                android:textColor="@color/maincolor"/>
 
-        </RelativeLayout>
+        </LinearLayout>
 
-        <TextView
-            android:id="@+id/txtRegister"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:paddingTop="10dp"
-            android:textSize="12dp"
-            android:onClick="registerUser"
-            android:textColor="@color/maincolor"/>
-
-    </LinearLayout>
-
+    </ScrollView>
 
 </LinearLayout>
