--- a/app/src/main/res/layout/custom_userpoints.xml
+++ b/app/src/main/res/layout/custom_userpoints.xml
@@ -16,9 +16,9 @@
         android:elevation="10dp">
 
         <TextView
+            android:id="@+id/userpoints"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="5dp"
             android:text="50 points - user"/>
 
     </RelativeLayout>
