--- a/app/src/main/res/layout/custom_map_popup.xml
+++ b/app/src/main/res/layout/custom_map_popup.xml
@@ -1,11 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
-    android:layout_width="250dp"
-    android:layout_height="200dp"
-    android:padding="5dp"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_margin="16dp"
+    android:paddingEnd="16dp"
+    android:paddingLeft="16dp"
+    android:paddingRight="16dp"
+    android:paddingStart="16dp"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
     android:background="@drawable/custom_border">
-
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -29,22 +35,26 @@
 
         <TextView
             android:id="@+id/close"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_weight="0"
             android:textColor="@color/maincolor"
-            android:textSize="12dp"
+            android:textSize="16dp"
             android:text="X"
             android:maxLines="1"
             android:textStyle="bold"
             android:layout_marginRight="10dp"
+            android:layout_marginTop="5dp"
             android:layout_gravity="end"
             android:gravity="center"/>
+
+
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp">
+        android:layout_height="50dp"
+        android:layout_marginTop="15dp">
 
         <LinearLayout
             android:layout_width="0dp"
@@ -60,7 +70,7 @@
 
                 <TextView
                     android:id="@+id/description"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textColor="@color/maincolor"
                     android:textSize="14dp"
@@ -77,7 +87,7 @@
 
                 <TextView
                     android:id="@+id/address"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textColor="@color/maincolor"
                     android:textSize="14dp"
@@ -136,23 +146,9 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp">
-
-        <ImageView
-            android:id="@+id/photo"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="5dp"
-            android:layout_marginBottom="5dp"
-            android:layout_marginLeft="50dp"
-            android:layout_marginRight="50dp"/>
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:layout_marginTop="15dp">
 
         <LinearLayout
             android:orientation="horizontal"
